# duaterm

./: .SRCINFO  .gitignore  PKGBUILD  README.md  build-package.sh  index.html  install.sh  pyproject.toml  run-in-kitty.sh
debian/: changelog  control  copyright  install  rules
docs/: index.html
packaging/: quran-terminal-reader.spec
src/quran_tui/: __main__.py  api.py  azkar.py  browser_fallback.py  image_render.py  rendering.py  ui.py
src/quran_tui/_vendor/: __init__.py
src/quran_tui/_vendor/bidi/: __init__.py
