[project]
name = "noorterm"
version = "0.1.0"
description = "Light in your terminal: Quran and Azkar with a calm TUI."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
noorterm = "quran_tui.__main__:main"
quran-tui = "quran_tui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
quran_tui = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
